# srp-bigint-lib

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  docker-compose.yml
include/: BigInt.hpp  BigIntUtils.hpp
scripts/: build.sh  run_benchmarks.sh
src/: BigInt.cpp  BigIntUtils.cpp
tests/: testBigInt.cpp
